# study_note

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup-rye.sh
.github/workflows/: apply_lint_and_test.yaml  gh-pages.yml
docs/: _quarto.yml  another_notebook.qmd  index.qmd  styles.css
docs/nonlinear_contol/: discrete.qmd  discrete_and_continuous.qmd  generally_symmetric.qmd  index.qmd  linear_and_nonlinear.qmd  quadratic_approximation.qmd
docs/nonlinear_control/: continuous.qmd  discrete.qmd  discrete_and_continuous.qmd  generally_symmetric.qmd  index.qmd  quadratic_approximation.qmd  variational_calculus.qmd
docs/nonlinear_control/notebook/: u.npy
notebook/: another_notebook.ipynb  descrete_linear_quadratic.ipynb  your_notebook.ipynb
notebook/nonlinear_control/: cgmres_jax.ipynb  descrete_linear_quadratic.ipynb  descrete_linear_quadratic_final.ipynb  gradient_method.ipynb  gradient_method_for_nonlinear.ipynb  gradient_method_for_nonliner.ipynb  linear_quadratic.ipynb  linear_quadratic_short.ipynb  rachistochrone_curve.ipynb
python_research_software_templete/: sample.py
study_note/: __init__.py  sample.py
tests/: test_sample.py
